--- a/FBSDK_Demo/FBSDK_Demo/Base.lproj/Main.storyboard
+++ b/FBSDK_Demo/FBSDK_Demo/Base.lproj/Main.storyboard
@@ -18,36 +18,63 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kd9-9v-drk">
-                                <rect key="frame" x="20" y="20" width="206" height="30"/>
+                                <rect key="frame" x="20" y="20" width="145" height="30"/>
                                 <state key="normal" title="FB Basic Share"/>
                                 <connections>
                                     <action selector="fbShareButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Ou-R1-E3T"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Zz-yG-tN1">
-                                <rect key="frame" x="20" y="144" width="206" height="30"/>
+                                <rect key="frame" x="20" y="144" width="145" height="30"/>
                                 <state key="normal" title="FB photo share"/>
                                 <connections>
                                     <action selector="fbPhotoShareButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cfc-Eu-p9i"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AbS-u4-E5T">
-                                <rect key="frame" x="20" y="208" width="206" height="30"/>
+                                <rect key="frame" x="20" y="208" width="145" height="30"/>
                                 <state key="normal" title="FB video share"/>
                                 <connections>
                                     <action selector="fbVideoShareButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TEG-4n-YO4"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOw-mq-sNA">
-                                <rect key="frame" x="20" y="81" width="206" height="30"/>
+                                <rect key="frame" x="20" y="81" width="145" height="30"/>
                                 <state key="normal" title="FB webView share"/>
                                 <connections>
                                     <action selector="fbWebViewStyleShareButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bst-y1-A6l"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FaC-3b-eRi">
+                                <rect key="frame" x="146" y="128" width="208" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BHM-Q8-ErC">
+                                <rect key="frame" x="146" y="173" width="208" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User ID" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrk-Mf-Ed8">
+                                <rect key="frame" x="146" y="212" width="208" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gl9-eH-S6B">
+                                <rect key="frame" x="200" y="20" width="100" height="100"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="fbEmail" destination="BHM-Q8-ErC" id="qVz-nw-YBD"/>
+                        <outlet property="fbUserID" destination="rrk-Mf-Ed8" id="wzU-Bf-pCY"/>
+                        <outlet property="fbUsername" destination="FaC-3b-eRi" id="zjR-5f-kzc"/>
+                        <outlet property="imageView" destination="gl9-eH-S6B" id="SC6-Fg-pqu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
