--- a/Project04_loginAnimation/HomeViewController.xib
+++ b/Project04_loginAnimation/HomeViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -14,26 +14,34 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Spotiify" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxZ-ca-hns">
-                    <rect key="frame" x="158" y="82" width="59" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spotiify" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxZ-ca-hns">
+                    <rect key="frame" x="271" y="81" width="59" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Fq-kY-Sih">
-                    <rect key="frame" x="57" y="486" width="260" height="57"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Fq-kY-Sih">
+                    <rect key="frame" x="170" y="416" width="260" height="57"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="260" id="U5P-1K-lDf"/>
+                        <constraint firstAttribute="height" constant="57" id="d8V-il-jcw"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <state key="normal" title="Sign Up">
                         <color key="titleColor" red="1" green="0.55745930850000003" blue="0.23000147779999999" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bha-8Y-87f">
-                    <rect key="frame" x="57" y="567" width="260" height="57"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bha-8Y-87f">
+                    <rect key="frame" x="170" y="493" width="260" height="57"/>
                     <color key="backgroundColor" red="0.32722530059999999" green="0.71640360219999999" blue="0.67175526100000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="260" id="1zh-Bz-EPw"/>
+                        <constraint firstAttribute="height" constant="57" id="bHX-5T-veK"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <state key="normal" title="Log In">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -41,7 +49,14 @@
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.40182891799999998" green="1" blue="0.81077250199999995" alpha="1" colorSpace="calibratedRGB"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <constraints>
+                <constraint firstItem="jxZ-ca-hns" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="0wX-5f-Gny"/>
+                <constraint firstItem="0Fq-kY-Sih" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Dnc-0L-H8i"/>
+                <constraint firstItem="bha-8Y-87f" firstAttribute="top" secondItem="0Fq-kY-Sih" secondAttribute="bottom" constant="20" id="LPQ-TU-Gh7"/>
+                <constraint firstItem="jxZ-ca-hns" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="81" id="XFN-iN-9zd"/>
+                <constraint firstItem="bha-8Y-87f" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="bDq-d2-zPb"/>
+                <constraint firstAttribute="bottom" secondItem="bha-8Y-87f" secondAttribute="bottom" constant="50" id="fUy-Y4-GMD"/>
+            </constraints>
             <point key="canvasLocation" x="489.5" y="366.5"/>
         </view>
     </objects>
