--- a/Project04_loginAnimation/LogInViewController.xib
+++ b/Project04_loginAnimation/LogInViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -18,11 +18,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OcF-lC-n9E">
-                    <rect key="frame" x="44" y="81" width="286" height="30"/>
+                    <rect key="frame" x="157" y="81" width="286" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="286" id="gYR-6J-yA1"/>
                     </constraints>
@@ -30,23 +30,13 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3P3-IW-wBS">
-                    <rect key="frame" x="44" y="164" width="286" height="30"/>
+                    <rect key="frame" x="157" y="164" width="286" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="286" id="2f6-gr-YOq"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZu-nE-oQv">
-                    <rect key="frame" x="86" y="246" width="202" height="48"/>
-                    <color key="backgroundColor" red="0.32722530059999999" green="0.71640360219999999" blue="0.67175526100000005" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="Login">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="0ig-Rw-qpo"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kmW-q4-fqd">
                     <rect key="frame" x="22" y="19" width="34" height="30"/>
                     <state key="normal" title="Back">
@@ -56,15 +46,30 @@
                         <action selector="backAction:" destination="-1" eventType="touchUpInside" id="p6k-Ky-gSd"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZu-nE-oQv">
+                    <rect key="frame" x="199" y="238" width="202" height="48"/>
+                    <color key="backgroundColor" red="0.32722530059999999" green="0.71640360219999999" blue="0.67175526100000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="202" id="FsN-21-EIo"/>
+                        <constraint firstAttribute="height" constant="48" id="qQL-K4-I4B"/>
+                    </constraints>
+                    <state key="normal" title="Login">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="0ig-Rw-qpo"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.40182891799999998" green="1" blue="0.81077250199999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="ZZu-nE-oQv" firstAttribute="top" secondItem="3P3-IW-wBS" secondAttribute="bottom" constant="44" id="KcN-57-HzG"/>
                 <constraint firstItem="3P3-IW-wBS" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OzY-dX-BET"/>
                 <constraint firstItem="OcF-lC-n9E" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="81" id="SMm-cA-cQ7"/>
+                <constraint firstItem="ZZu-nE-oQv" firstAttribute="centerX" secondItem="3P3-IW-wBS" secondAttribute="centerX" id="gj2-UW-1oP"/>
                 <constraint firstItem="3P3-IW-wBS" firstAttribute="top" secondItem="OcF-lC-n9E" secondAttribute="bottom" constant="53" id="mJ5-mq-2Me"/>
                 <constraint firstItem="OcF-lC-n9E" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="o02-7n-QWe"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="359.5" y="366.5"/>
         </view>
     </objects>
